# mytraderbotScraper

./: .gitignore  LICENSE  README.md  pyproject.toml  scrapy.cfg
src/mytraderbotScraper/: api.py  cli.py  items.py  pipelines.py  settings.py
src/mytraderbotScraper/spiders/: boursorama_news.py
tests/: test_basics.py
